<?xml version="1.0"?>
<package>
  <name>essential_moos</name>
  <version>10.0.3</version>
  <description>Essential MOOS</description>

  <maintainer email="pnewman@robots.xo.ac.uk">Paul Newman</maintainer>
  <author>Paul Newman</author>

  <license>LGPL, GPL</license>

  <buildtool_depend>cmake</buildtool_depend>
  <buildtool_depend>doxygen</buildtool_depend>

  <build_depend>core_moos</build_depend>
  
  <run_depend>core_moos</run_depend>

  <export>
    <build_type>cmake</build_type>
  </export>
</package>
